--- a/test-ts/bindings/templates/contract.handlebars
+++ b/test-ts/bindings/templates/contract.handlebars
@@ -1,7 +1,7 @@
 // tslint:disable
 
 import { BN } from "bn.js";
-import { Log, TransactionReceipt, Tx } from "web3/types";
+import { Log, Provider, TransactionReceipt, Tx } from "web3/types";
 
 export interface Transaction { receipt: TransactionReceipt; tx: string; logs: Log[]; }
 
@@ -24,4 +24,5 @@ export interface {{contractName}}Artifact {
     "new"({{> typed_params inputs=ctor.inputs}}): Promise<{{contractName}}Contract>;
     at(address: string): Promise<{{contractName}}Contract>;
     deployed(): Promise<{{contractName}}Contract>;
+    setProvider(provider: Provider): void;
 }
