--- a/test-ts/bindings/templates/contract.handlebars
+++ b/test-ts/bindings/templates/contract.handlebars
@@ -7,6 +7,14 @@ export interface Transaction { receipt: TransactionReceipt; tx: string; logs: Lo
 
 type BigNumber = string | number | BN;
 
+{{#if events}}
+export const {{contractName}}Events = {
+    {{#each events}}
+    {{> event}}
+    {{/each}}
+};
+{{/if}}
+
 export interface {{contractName}}Contract {
 {{#each methods}}
     {{#this.constant}}
