--- a/test-ts/bindings/templates/partials/typed_params.handlebars
+++ b/test-ts/bindings/templates/partials/typed_params.handlebars
@@ -1,1 +1,1 @@
-{{#each inputs}}{{name}}: {{#parameterType type components}}{{/parameterType}}, {{/each}}options?: Tx
+{{#each inputs}}{{name}}: {{#parameterType type components}}{{/parameterType}}, {{/each}}options?: SendOptions
